--- a/finalRPS.css
+++ b/finalRPS.css
@@ -60,7 +60,6 @@ header{
 
 .img-options{
    width: 85%;
-
 }
 
 #Insect-img,
@@ -78,7 +77,7 @@ header{
 #Snake-img:hover{
     transform: scale(1.01);
     transition-duration: 0.4s;
-    box-shadow: 0 0 0 8px rgba(173, 172, 166, 0.6);
+    box-shadow: 0 0 0 3px rgba(173, 172, 166, 0.6);
    
 }
 
@@ -93,16 +92,20 @@ header{
 }
 
 #announcement{
-    margin: 0 auto;
     margin: 3% auto;
 }
 
 
-#play-again{
-    margin: 1% auto;
+.playAgain{
+    margin: 2% auto;
+    background-color: rgba(19, 148, 106); 
+    width: 20%;
+    height: 100px;
+    border-radius: 3px; 
 }
 
-#play-again:hover{
-    transform: scale(1.02);
-} 
-
+.playAgain:hover{
+    transition-duration: 0.2s;
+    box-shadow: 0 0 3px;
+    background-color: purple;
+}
